--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-test:
 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -32,3 +32,22 @@ jobs:
         pip install -r requirements.txt
     - name: Run Unitest
       run: python -m unittest discover tests 
+  docker-build-push:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+    
+    - name: checkout
+      uses: actions/checkout@v4   
+    
+    - name: docker login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    
+    - name: Build and push
+      run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest .
+    
+    - name: Docker Push
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest
