--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,7 +47,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     
     - name: Build and push
-      run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest .
     
     - name: Docker Push
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/python-app:latest
